# vps-mcp

./: .env.example  .gitignore  CLAUDE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SECURITY_NOTE.md  TESTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  run_tests.sh  setup.py  simple_start.sh  validate_deployment.py
config/: servers.yaml.example
src/vps_manager/: __init__.py  config.py  connection_pool.py  queue.py  security.py  server.py
src/vps_manager/tools/: command.py  file_ops.py  monitoring.py  services.py
src/vps_manager/utils/: distro.py  error_handling.py  mcp_responses.py
templates/: claude_desktop_config.json  servers.yaml
tests/: conftest.py
tests/configs/: test_multiple_servers.yaml
tests/integration/: test_basic_functionality.py  test_mcp_server.py
tests/unit/: test_config.py  test_connection_pool.py  test_security.py  test_tools.py
