[tool.poetry]
name = "mcp-vps-manager"
version = "0.2.0"
description = "A secure, production-ready MCP server for managing Virtual Private Servers via SSH"
authors = ["Meeru <asifur.rahaman@meeru.dev>"]
maintainers = ["Meeru <asifur.rahaman@meeru.dev>"]
readme = "README.md"
homepage = "https://github.com/your-org/mcp-vps-manager"
repository = "https://github.com/your-org/mcp-vps-manager"
documentation = "https://github.com/your-org/mcp-vps-manager/wiki"
keywords = ["mcp", "vps", "ssh", "server", "management", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
packages = [{ include = "vps_manager", from = "src" }]
include = [
    "config/*.yaml",
    "templates/*.yaml",
    "templates/*.json",
    "bin/mcp-vps-manager",
    "INSTALL.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
mcp = "^1.0.0"
paramiko = "^3.0.0"
pyyaml = "^6.0"
asyncssh = "^2.14.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
types-PyYAML = "^6.0.0"

[tool.poetry.scripts]
mcp-vps-manager = "vps_manager.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
